'增加日志功能,修改部分bug'

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,3 +14,9 @@ spring:
 mybatis:
   mapper-locations: classpath:mapping/*.xml
   type-aliases-package: com.ourteam.dzpt.entity
+
+
+logging:
+  path: ./logs/
+  level:
+    root: info
