--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     username: dzpt
     password: dzpt
-    url: jdbc:mysql://10.2.1.226:3306/dzpt?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost/dzpt?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
     driver-class-name: com.mysql.jdbc.Driver
   redis:
     host: 127.0.0.1
@@ -15,10 +15,3 @@ mybatis:
   mapper-locations: classpath:mapping/*.xml
   type-aliases-package: com.ourteam.dzpt.entity
 
-logging:
-  path: ./logs/
-  level:
-    root: info
-
-web:
-  upload-path: C:/dzpt/upload/
