--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -15,3 +15,5 @@ mybatis:
   mapper-locations: classpath:mapping/*.xml
   type-aliases-package: com.ourteam.dzpt.entity
 
+web:
+  upload-path: C:/dzpt/upload/
