--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,16 +15,14 @@ mybatis:
   mapper-locations: classpath:mapping/*.xml
   type-aliases-package: com.ourteam.dzpt.entity
 
-logging:
-  path: ./logs/
-  level:
-    root: info
-
 web:
-  upload-path: C:/dzpt/upload/
+  upload-path: upload/
 
 pagehelper:
   helper-dialect: mysql
   reasonable: true
   support-methods-arguments: true
   params: count=countSql
+
+logging:
+  config: classpath:logback-boot.xml
